refactory/transactions (#75)
* refactor: refactor payments to be a transactions module

* chore: update mockery version

* feat: transactions migration

* refactory(frontend): implement transaction view and endpoints

* chore: fix transaction DTO

* chore: update go version

* fix: broken tests
