# backend/server/http/docs/swagger.json
@@ -176,169 +176,6 @@
                 }
             }
         },
-        "/payments": {
-            "get": {
-                "description": "get payments",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Payment"
-                ],
-                "summary": "List payments",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "dateTime",
-                        "description": "name search by q",
-                        "name": "start_at",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "format": "dateTime",
-                        "description": "name search by q",
-                        "name": "end_at",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/payment.Payment"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "when an error occurs",
-                        "schema": {
-                            "$ref": "#/definitions/dto.MessageJSON"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create a new payment and return payment data",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Payment"
-                ],
-                "summary": "Register a new payment",
-                "parameters": [
-                    {
-                        "description": "the payload data",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.CreatePaymentPayload"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/payment.Payment"
-                        }
-                    },
-                    "422": {
-                        "description": "when payload is invalid",
-                        "schema": {
-                            "$ref": "#/definitions/dto.MessageJSON"
-                        }
-                    },
-                    "500": {
-                        "description": "when an error occurs",
-                        "schema": {
-                            "$ref": "#/definitions/dto.MessageJSON"
-                        }
-                    }
-                }
-            }
-        },
-        "/payments/{id}": {
-            "post": {
-                "description": "Update payment data",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Payment"
-                ],
-                "summary": "Update Payment by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "the id of payment",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/payment.Payment"
-                        }
-                    },
-                    "500": {
-                        "description": "when an error occurs",
-                        "schema": {
-                            "$ref": "#/definitions/dto.MessageJSON"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete payment",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Payment"
-                ],
-                "summary": "Delete Payment by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "the id of payment",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": "Accepted"
-                    },
-                    "500": {
-                        "description": "when an error occurs",
-                        "schema": {
-                            "$ref": "#/definitions/dto.MessageJSON"
-                        }
-                    }
-                }
-            }
-        },
         "/products/": {
             "get": {
                 "description": "Get all products data",
@@ -628,6 +465,133 @@
                 }
             }
         },
+        "/transactions": {
+            "get": {
+                "description": "get transactions",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transaction"
+                ],
+                "summary": "List transactions",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "dateTime",
+                        "description": "name search by q",
+                        "name": "start_at",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "format": "dateTime",
+                        "description": "name search by q",
+                        "name": "end_at",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/transaction.Transaction"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "when an error occurs",
+                        "schema": {
+                            "$ref": "#/definitions/dto.MessageJSON"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a new transaction and return transaction data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transaction"
+                ],
+                "summary": "Register a new transaction",
+                "parameters": [
+                    {
+                        "description": "the payload data",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateTransactionPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/transaction.Transaction"
+                        }
+                    },
+                    "422": {
+                        "description": "when payload is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/dto.MessageJSON"
+                        }
+                    },
+                    "500": {
+                        "description": "when an error occurs",
+                        "schema": {
+                            "$ref": "#/definitions/dto.MessageJSON"
+                        }
+                    }
+                }
+            }
+        },
+        "/transactions/{id}": {
+            "delete": {
+                "description": "Delete payment",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transaction"
+                ],
+                "summary": "Delete Transaction by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "the id of payment",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Accepted"
+                    },
+                    "500": {
+                        "description": "when an error occurs",
+                        "schema": {
+                            "$ref": "#/definitions/dto.MessageJSON"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "post": {
                 "description": "Create a new user and return user data",
@@ -738,17 +702,6 @@
                 }
             }
         },
-        "cashflow.BalanceType": {
-            "type": "string",
-            "enum": [
-                "Venda",
-                "Pagamento"
-            ],
-            "x-enum-varnames": [
-                "SaleBalance",
-                "BalancePayment"
-            ]
-        },
         "cashflow.CashFlow": {
             "type": "object",
             "properties": {
@@ -779,17 +732,6 @@
                     "type": "string"
                 },
                 "type": {
-                    "$ref": "#/definitions/cashflow.BalanceType"
-                },
-                "value": {
-                    "type": "number"
-                }
-            }
-        },
-        "dto.CreatePaymentPayload": {
-            "type": "object",
-            "properties": {
-                "description": {
                     "type": "string"
                 },
                 "value": {
@@ -810,6 +752,17 @@
                     "type": "number"
                 },
                 "price_varejo": {
+                    "type": "number"
+                }
+            }
+        },
+        "dto.CreateTransactionPayload": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "value": {
                     "type": "number"
                 }
             }
@@ -849,7 +802,7 @@
                     }
                 },
                 "payment_type": {
-                    "$ref": "#/definitions/sales.PaymentType"
+                    "type": "string"
                 }
             }
         },
@@ -857,41 +810,13 @@
             "type": "object",
             "properties": {
                 "database": {
-                    "$ref": "#/definitions/healthcheck.Status"
+                    "type": "string"
                 },
                 "status": {
-                    "$ref": "#/definitions/healthcheck.Status"
+                    "type": "string"
                 },
                 "version": {
                     "type": "string"
-                }
-            }
-        },
-        "healthcheck.Status": {
-            "type": "string",
-            "enum": [
-                "UP",
-                "DOWN"
-            ],
-            "x-enum-varnames": [
-                "StatusUp",
-                "StatusDown"
-            ]
-        },
-        "payment.Payment": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "value": {
-                    "type": "number"
                 }
             }
         },
@@ -946,25 +871,6 @@
                 }
             }
         },
-        "sales.PaymentType": {
-            "type": "string",
-            "enum": [
-                "Pagamento no PIX",
-                "Pagamento no Dinheiro",
-                "Pagamento no Cartão",
-                "Pagamento de funcionarios",
-                "Pagamento de fornecedores",
-                "Outros pagamentos"
-            ],
-            "x-enum-varnames": [
-                "PixPayment",
-                "CashPayment",
-                "CardPayment",
-                "EmployersPayment",
-                "SuppliersPayment",
-                "AnotherPayments"
-            ]
-        },
         "sales.Sale": {
             "type": "object",
             "properties": {
@@ -984,9 +890,29 @@
                     }
                 },
                 "payment_type": {
-                    "$ref": "#/definitions/sales.PaymentType"
+                    "type": "string"
                 },
                 "total": {
+                    "type": "number"
+                }
+            }
+        },
+        "transaction.Transaction": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "value": {
                     "type": "number"
                 }
             }
